# donerbench

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  concept.md  docker-compose.yml
assets/: README.md
backend/: Dockerfile  pyproject.toml
backend/donerbench/agents/: __init__.py  base.py  prompt.md  registry.py
backend/donerbench/api/: main.py
backend/donerbench/benchmark/: __init__.py  jobs.py  runner.py
backend/donerbench/schemas/: __init__.py  models.py
backend/donerbench/scoring/: __init__.py  engine.py
backend/donerbench/simulation/: __init__.py  engine.py
backend/tests/: test_agent_controls.py  test_agents.py  test_benchmark.py  test_decision_interval.py  test_history.py  test_jobs.py  test_live_agent_calls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AgentSelectionPanel.tsx  AgentViewport.tsx  BenchmarkConfigPanel.tsx  LeaderboardTable.tsx  SimulationGrid.tsx  SliceComparisonTable.tsx
frontend/src/rendering/: DonerScene.tsx
frontend/src/state/: benchmarkStore.ts
frontend/src/types/: benchmark.ts
frontend/tests/: donerbench-visual.spec.ts
